Odradjena implemantacija knjige